--- a/exp.html
+++ b/exp.html
@@ -11,9 +11,9 @@
  <div class="sidebar">
     <div class="nav-links">
       <a href="#" class="nav-link" style="background-color: #0a377b;color: #fff;">EXPERIENCE</a>
-      <a href="file:///C:/Users/Admin/VSCodeProjects/work.html" class="nav-link">MY WORK</a>
-      <a href="file:///C:/Users/Admin/VSCodeProjects/skills.html" class="nav-link">SKILLS</a>
-      <a href="file:///C:/Users/Admin/VSCodeProjects/index.html" class="nav-link">HOME</a>
+      <a href="work.html" class="nav-link">MY WORK</a>
+      <a href="skills.html" class="nav-link">SKILLS</a>
+      <a href="index.html" class="nav-link">HOME</a>
       
     </div>
     <div class="sidebar-icons">
