--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
  <div class="sidebar">
     <div class="nav-links">
-      <a href="file:///C:/Users/Admin/VSCodeProjects/exp.html" class="nav-link">EXPERIENCE</a>
-      <a href="file:///C:/Users/Admin/VSCodeProjects/work.html" class="nav-link">MY WORK</a>
-      <a href="file:///C:/Users/Admin/VSCodeProjects/skills.html" class="nav-link">SKILLS</a>
+      <a href="exp.html" class="nav-link">EXPERIENCE</a>
+      <a href="work.html" class="nav-link">MY WORK</a>
+      <a href="skills.html" class="nav-link">SKILLS</a>
       <a href="#" class="nav-link" style="background-color: #0a377b;color: #fff;">HOME</a>
     </div>
     <div class="sidebar-icons">
