--- a/work.html
+++ b/work.html
@@ -10,10 +10,10 @@
 <body>
  <div class="sidebar">
     <div class="nav-links">
-      <a href="file:///C:/Users/Admin/VSCodeProjects/exp.html" class="nav-link">EXPERIENCE</a>
+      <a href="exp.html" class="nav-link">EXPERIENCE</a>
       <a href="#" class="nav-link" style="background-color: #0a377b;color: #fff;">MY WORK</a>
-      <a href="file:///C:/Users/Admin/VSCodeProjects/skills.html" class="nav-link">SKILLS</a>
-      <a href="file:///C:/Users/Admin/VSCodeProjects/index.html" class="nav-link">HOME</a>
+      <a href="skills.html" class="nav-link">SKILLS</a>
+      <a href="index.html" class="nav-link">HOME</a>
       
     </div>
     <div class="sidebar-icons">
