--- a/work.html
+++ b/work.html
@@ -27,15 +27,15 @@
       <h1 style="font-weight: bolder;color: white;font-size: xx-large;">My Work </h1> 
       <div class="gallery-grid">
     <div class="gallery-item">
-      <img src="file:///C:/Users/Admin/VSCodeProjects/sjwel.jpg" alt="Project 1">
+      <img src="sjwel.jpg" alt="Project 1">
       <p class="caption">SJwellers</p>
     </div>
     <div class="gallery-item">
-      <img src="file:///C:/Users/Admin/VSCodeProjects/soyra.png" alt="Project 2">
+      <img src="soyra.png" alt="Project 2">
       <p class="caption">Soyra Maratha</p>
     </div>
     <div class="gallery-item">
-      <img src="file:///C:/Users/Admin/VSCodeProjects/chilleats.webp" alt="Project 3">
+      <img src="chilleats.webp" alt="Project 3">
       <p class="caption">ChillEats</p>
     </div>
     <!-- add more items here -->
@@ -45,15 +45,15 @@
   <div class="main" id="main">
     <div class="gallery-grid" style="padding-top: 14%;">
     <div class="gallery-item" style="background: rgba(255, 255, 255, 0.404);">
-      <img src="file:///C:/Users/Admin/VSCodeProjects/pharma.webp" alt="Project 4">
+      <img src="pharma.webp" alt="Project 4">
       <p class="caption" style="color: black;">Pharma Town</p>
     </div>
     <div class="gallery-item" style="background: rgba(255, 255, 255, 0.404);">
-      <img src="file:///C:/Users/Admin/VSCodeProjects/mudra.png" alt="Project 5">
+      <img src="mudra.png" alt="Project 5">
       <p class="caption" style="color: black;">Mudra Loan</p>
     </div>
     <div class="gallery-item" >
-      <img src="file:///C:/Users/Admin/StudioProjects/pedicure/assets/splash.jpeg" alt="Project 6">
+      <img src="splash.jpeg" alt="Project 6">
       <p class="caption" style="color: black;">Podiad</p>
     </div>
     <!-- add more items here -->
